auto publishing updates to notebooks

--- a/inventory_dynamics.ipynb
+++ b/inventory_dynamics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "d0340cad",
+   "id": "102a2266",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f982a4c7",
+   "id": "f74572d3",
    "metadata": {},
    "source": [
     "# Inventory Dynamics"
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c7ef58f7",
+   "id": "a9972832",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2f4105c9",
+   "id": "efd9bb45",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -70,7 +70,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7c2dd0a1",
+   "id": "abdc4b19",
    "metadata": {
     "hide-output": false
    },
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6d05a37c",
+   "id": "eb318aed",
    "metadata": {},
    "source": [
     "Here’s a description of our GPU:"
@@ -96,7 +96,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1989d0be",
+   "id": "32ed1ba5",
    "metadata": {
     "hide-output": false
    },
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c053a014",
+   "id": "5f8dcad9",
    "metadata": {},
    "source": [
     "## Sample paths\n",
@@ -145,7 +145,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eb2346ef",
+   "id": "3b53cccc",
    "metadata": {
     "hide-output": false
    },
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "65f28b4d",
+   "id": "ba9fb4de",
    "metadata": {},
    "source": [
     "## Cross-sectional distributions\n",
@@ -189,7 +189,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e619a908",
+   "id": "46569cf5",
    "metadata": {
     "hide-output": false
    },
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9ddc188b",
+   "id": "5b6c55ca",
    "metadata": {},
    "source": [
     "### For loop version\n",
@@ -236,7 +236,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "78e7fd92",
+   "id": "28482c4d",
    "metadata": {
     "hide-output": false
    },
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "81f080c2",
+   "id": "56309c1f",
    "metadata": {},
    "source": [
     "We’ll use the following specification"
@@ -271,7 +271,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f2e97af0",
+   "id": "c0d646b5",
    "metadata": {
     "hide-output": false
    },
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8ac7ab66",
+   "id": "92127340",
    "metadata": {},
    "source": [
     "Let’s look at the timing."
@@ -295,7 +295,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b7b41b75",
+   "id": "f6dd20ae",
    "metadata": {
     "hide-output": false
    },
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3c076aea",
+   "id": "694f5b90",
    "metadata": {},
    "source": [
     "Let’s run again to eliminate compile time."
@@ -319,7 +319,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0e7d65d7",
+   "id": "40c14ecc",
    "metadata": {
     "hide-output": false
    },
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7897e539",
+   "id": "768b8436",
    "metadata": {},
    "source": [
     "Here’s a histogram of inventory levels at time $ T $."
@@ -343,7 +343,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "03702661",
+   "id": "636e21f3",
    "metadata": {
     "hide-output": false
    },
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "149f35ce",
+   "id": "3446ed56",
    "metadata": {},
    "source": [
     "### Compiling the outer loop\n",
@@ -376,7 +376,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4c0bb341",
+   "id": "d38a2081",
    "metadata": {
     "hide-output": false
    },
@@ -420,7 +420,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ee010643",
+   "id": "f7ed4d4c",
    "metadata": {},
    "source": [
     "Let’s see how fast this runs with compile time."
@@ -429,7 +429,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bcad902a",
+   "id": "ac189260",
    "metadata": {
     "hide-output": false
    },
@@ -444,7 +444,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3d36ccf8",
+   "id": "3032144c",
    "metadata": {},
    "source": [
     "And let’s see how fast it runs without compile time."
@@ -453,7 +453,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8e26ed40",
+   "id": "6ce5d8e2",
    "metadata": {
     "hide-output": false
    },
@@ -468,7 +468,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "94e54daf",
+   "id": "9b1e1c02",
    "metadata": {},
    "source": [
     "Compared to the original version with a pure Python outer loop, we have\n",
@@ -479,7 +479,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "53ab381e",
+   "id": "866fc105",
    "metadata": {},
    "source": [
     "## Distribution dynamics\n",
@@ -495,7 +495,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2a1e494a",
+   "id": "4b389a42",
    "metadata": {
     "hide-output": false
    },
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3e430229",
+   "id": "725fe24d",
    "metadata": {},
    "source": [
     "Let’s test it"
@@ -532,7 +532,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1dcf4e33",
+   "id": "2add9bf2",
    "metadata": {
     "hide-output": false
    },
@@ -549,7 +549,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "032fc0b7",
+   "id": "566e27fa",
    "metadata": {},
    "source": [
     "Let’s plot the output."
@@ -558,7 +558,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "94b879de",
+   "id": "41252427",
    "metadata": {
     "hide-output": false
    },
@@ -580,7 +580,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a015245d",
+   "id": "cf1f510f",
    "metadata": {},
    "source": [
     "This model for inventory dynamics is asymptotically stationary, with a unique\n",
@@ -599,7 +599,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "da7b4542",
+   "id": "25cb4249",
    "metadata": {},
    "source": [
     "## Restock frequency\n",
@@ -618,7 +618,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "87cd5fca",
+   "id": "46835e0d",
    "metadata": {},
    "source": [
     "### For loop version\n",
@@ -629,7 +629,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "507f462c",
+   "id": "78d07470",
    "metadata": {
     "hide-output": false
    },
@@ -671,7 +671,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "79c89f95",
+   "id": "15356d55",
    "metadata": {
     "hide-output": false
    },
@@ -687,7 +687,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6b10431a",
+   "id": "ea5cef79",
    "metadata": {},
    "source": [
     "We run the code again to get rid of compile time."
@@ -696,7 +696,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bbe2a8f5",
+   "id": "0445849c",
    "metadata": {
     "hide-output": false
    },
@@ -711,7 +711,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6fa3fb7f",
+   "id": "b8039997",
    "metadata": {
     "hide-output": false
    },
@@ -722,7 +722,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ee0baaaa",
+   "id": "91617cdb",
    "metadata": {},
    "source": [
     "### Exercise 5.1\n",
@@ -733,7 +733,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "07be2d3c",
+   "id": "1fd34c16",
    "metadata": {},
    "source": [
     "### Solution to[ Exercise 5.1](https://jax.quantecon.org/#inventory_dynamics_ex1)\n",
@@ -744,7 +744,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "159f377c",
+   "id": "db5091c1",
    "metadata": {
     "hide-output": false
    },
@@ -788,7 +788,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "53cc861e",
+   "id": "403cbe51",
    "metadata": {},
    "source": [
     "Note the time the routine takes to run, as well as the output"
@@ -797,7 +797,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8186fa77",
+   "id": "62b6e91e",
    "metadata": {
     "hide-output": false
    },
@@ -811,7 +811,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "74d64b9f",
+   "id": "90027f82",
    "metadata": {},
    "source": [
     "We run the code again to eliminate the compile time."
@@ -820,7 +820,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bf18ec6d",
+   "id": "787bac35",
    "metadata": {
     "hide-output": false
    },
@@ -835,7 +835,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16e10370",
+   "id": "e2e43b05",
    "metadata": {
     "hide-output": false
    },
@@ -846,7 +846,7 @@
   }
  ],
  "metadata": {
-  "date": 1764311390.895586,
+  "date": 1764321277.3515494,
   "filename": "inventory_dynamics.md",
   "kernelspec": {
    "display_name": "Python",
