--- a/jax_nn.ipynb
+++ b/jax_nn.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "44e31c1d",
+   "id": "3d5a0e0b",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3bd66b18",
+   "id": "a3baa731",
    "metadata": {},
    "source": [
     "# Neural Network Regression with JAX"
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "65b7b3d4",
+   "id": "ee3e314e",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -35,17 +35,22 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1ddffc4b",
+   "id": "ef17cc6d",
    "metadata": {},
    "source": [
     "## Outline\n",
     "\n",
-    "In a [previous lecture](https://jax.quantecon.org/keras.html), we showed how to implement regression using a neural network via the popular deep learning library [Keras](https://keras.io/).\n",
+    "In a [previous lecture](https://jax.quantecon.org/keras.html), we showed how to implement regression\n",
+    "using a neural network via the deep learning library [Keras](https://keras.io/).\n",
     "\n",
     "In this lecture, we solve the same problem directly, using JAX operations rather than relying on the Keras frontend.\n",
     "\n",
-    "The objective is to understand the nuts and bolts of the exercise better, as\n",
-    "well as to explore more features of JAX.\n",
+    "The objectives are\n",
+    "\n",
+    "- Understand the nuts and bolts of the exercise better  \n",
+    "- Explore more features of JAX  \n",
+    "- Observe how using JAX directly allows us to greatly improve performance.  \n",
+    "\n",
     "\n",
     "The lecture proceeds in three stages:\n",
     "\n",
@@ -60,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e2c08812",
+   "id": "c86e0b43",
    "metadata": {
     "hide-output": false
    },
@@ -77,7 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "252c84c1",
+   "id": "f203733c",
    "metadata": {
     "hide-output": false
    },
@@ -89,7 +94,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9813d06f",
+   "id": "4187902f",
    "metadata": {
     "hide-output": false
    },
@@ -100,7 +105,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bf710572",
+   "id": "33f02ba2",
    "metadata": {},
    "source": [
     ">**Note**\n",
@@ -117,7 +122,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f00c23a3",
+   "id": "5cc941a8",
    "metadata": {
     "hide-output": false
    },
@@ -131,7 +136,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ff203deb",
+   "id": "e5a0f4d0",
    "metadata": {},
    "source": [
     "## Set Up\n",
@@ -141,7 +146,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ec2ca76d",
+   "id": "7047d577",
    "metadata": {},
    "source": [
     "### Flow\n",
@@ -165,7 +170,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f15e3803",
+   "id": "4a12c541",
    "metadata": {
     "hide-output": false
    },
@@ -183,7 +188,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6c117e45",
+   "id": "da65794d",
    "metadata": {},
    "source": [
     "### Data\n",
@@ -194,7 +199,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bf35d4fd",
+   "id": "0ae38127",
    "metadata": {
     "hide-output": false
    },
@@ -221,7 +226,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b548f60e",
+   "id": "aeb27631",
    "metadata": {},
    "source": [
     "Here’s a plot of the data."
@@ -230,7 +235,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "41cc3956",
+   "id": "0fef8606",
    "metadata": {
     "hide-output": false
    },
@@ -248,7 +253,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "40a633af",
+   "id": "bcd32880",
    "metadata": {},
    "source": [
     "## Training with Keras\n",
@@ -266,7 +271,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "37084ab4",
+   "id": "699a387d",
    "metadata": {
     "hide-output": false
    },
@@ -294,7 +299,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a302027c",
+   "id": "83b5c4db",
    "metadata": {},
    "source": [
     "Notice that we’ve set the optimizer to use stochastic gradient descent and a\n",
@@ -306,7 +311,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0da725a6",
+   "id": "668a4b71",
    "metadata": {
     "hide-output": false
    },
@@ -337,7 +342,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d1804c4d",
+   "id": "11561e20",
    "metadata": {},
    "source": [
     "The next function extracts and visualizes a prediction from the trained model."
@@ -346,7 +351,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cbe58dd4",
+   "id": "43405b6e",
    "metadata": {
     "hide-output": false
    },
@@ -364,7 +369,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3704cbd8",
+   "id": "c26abf5a",
    "metadata": {},
    "source": [
     "Let’s run the Keras training:"
@@ -373,7 +378,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fea16f89",
+   "id": "a119161d",
    "metadata": {
     "hide-output": false
    },
@@ -393,7 +398,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8b84192e",
+   "id": "a182dc3b",
    "metadata": {},
    "source": [
     "The fit is good and we note the relatively low final MSE."
@@ -401,7 +406,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d2a92a8f",
+   "id": "5e4c6681",
    "metadata": {},
    "source": [
     "## Training with JAX\n",
@@ -414,7 +419,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "da3ea966",
+   "id": "9803d336",
    "metadata": {},
    "source": [
     "### Background and set up\n",
@@ -457,7 +462,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2d2c0ac2",
+   "id": "84a5a028",
    "metadata": {
     "hide-output": false
    },
@@ -493,7 +498,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "af2171b2",
+   "id": "2d5bffd5",
    "metadata": {},
    "source": [
     "Wait, you say!\n",
@@ -505,7 +510,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9db58140",
+   "id": "85ee4cf6",
    "metadata": {},
    "source": [
     "### Coding the network\n",
@@ -516,7 +521,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6dc96df9",
+   "id": "9e19ee79",
    "metadata": {
     "hide-output": false
    },
@@ -542,7 +547,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "97d46679",
+   "id": "5e027d08",
    "metadata": {},
    "source": [
     "The function $ f $ is appropriately vectorized, so that we can pass in the entire\n",
@@ -555,7 +560,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b02ab1b0",
+   "id": "3f24c892",
    "metadata": {
     "hide-output": false
    },
@@ -572,7 +577,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cff7fe30",
+   "id": "d7b29cae",
    "metadata": {},
    "source": [
     "We’ll use its gradient to do stochastic gradient descent.\n",
@@ -585,7 +590,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "135576fe",
+   "id": "a96a72f5",
    "metadata": {
     "hide-output": false
    },
@@ -596,7 +601,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7c8b8698",
+   "id": "8ce64be9",
    "metadata": {},
    "source": [
     "The gradient of `loss_fn` is with respect to the first argument `θ`.\n",
@@ -618,7 +623,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "76aab30c",
+   "id": "5bb1fcaa",
    "metadata": {},
    "source": [
     "### Gradient descent\n",
@@ -632,7 +637,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9530edb3",
+   "id": "482d6128",
    "metadata": {
     "hide-output": false
    },
@@ -665,7 +670,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "795e321e",
+   "id": "88df59c8",
    "metadata": {},
    "source": [
     "Here `jax.tree.map` understands `θ` and `gradient` as pytrees of the\n",
@@ -681,7 +686,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6a6d6345",
+   "id": "f3a249ab",
    "metadata": {
     "hide-output": false
    },
@@ -716,7 +721,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2643f0c3",
+   "id": "ec596f5e",
    "metadata": {},
    "source": [
     "### Execution\n",
@@ -729,7 +734,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aa2a636b",
+   "id": "84d207c0",
    "metadata": {
     "hide-output": false
    },
@@ -743,14 +748,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ef3fac65",
+   "id": "49b3b804",
    "metadata": {
     "hide-output": false
    },
    "outputs": [],
    "source": [
     "# Warmup run to trigger JIT compilation\n",
-    "θ_warmup, _, _ = train_jax_model(θ, x, y, x_validate, y_validate, config)\n",
+    "train_jax_model(θ, x, y, x_validate, y_validate, config)\n",
     "\n",
     "# Reset and time the actual run\n",
     "θ = initialize_params(param_key, config)\n",
@@ -768,16 +773,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0d26aab9",
+   "id": "851c31f6",
    "metadata": {},
    "source": [
+    "Despite the simplicity of our implementation, we actually perform slightly better than Keras.\n",
+    "\n",
     "This figure shows MSE across iterations:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9b0aa46f",
+   "id": "08e9765e",
    "metadata": {
     "hide-output": false
    },
@@ -791,42 +798,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "82efe68e",
+   "id": "2a218ecd",
    "metadata": {},
    "source": [
-    "Let’s check the final MSE on the validation data, at the estimated parameters."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ba1d8a34",
-   "metadata": {
-    "hide-output": false
-   },
-   "outputs": [],
-   "source": [
-    "print(f\"\"\"\n",
-    "Final MSE on test data set = {loss_fn(θ, x_validate, y_validate)}.\n",
-    "\"\"\"\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "ebd4fa1d",
-   "metadata": {},
-   "source": [
-    "This MSE is not as low as we got for Keras, but we did quite well given how\n",
-    "simple our implementation is.\n",
-    "\n",
     "Here’s a visualization of the quality of our fit."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a43a6396",
+   "id": "bd541623",
    "metadata": {
     "hide-output": false
    },
@@ -843,7 +824,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5f311688",
+   "id": "78517244",
    "metadata": {},
    "source": [
     "## JAX plus Optax\n",
@@ -856,7 +837,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "84e4a36c",
+   "id": "a2ac1c25",
    "metadata": {},
    "source": [
     "### Optax with SGD\n",
@@ -867,7 +848,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6c9d164f",
+   "id": "b6d11973",
    "metadata": {
     "hide-output": false
    },
@@ -882,25 +863,25 @@
     "    ):\n",
     "    \"\"\"\n",
     "    Train model using Optax SGD optimizer.\n",
-    "    Pure functional version using jax.lax.scan.\n",
+    "    Pure functional version using jax.lax.fori_loop.\n",
     "    \"\"\"\n",
     "    solver = optax.sgd(learning_rate)\n",
     "    opt_state = solver.init(θ)\n",
     "\n",
-    "    def train_step(carry, _):\n",
+    "    def train_step(i, carry):\n",
     "        θ, opt_state = carry\n",
     "        grad = loss_gradient(θ, x, y)\n",
     "        updates, opt_state_new = solver.update(grad, opt_state, θ)\n",
     "        θ_new = optax.apply_updates(θ, updates)\n",
-    "        return (θ_new, opt_state_new), None\n",
+    "        return (θ_new, opt_state_new)\n",
     "\n",
-    "    (θ_final, _), _ = jax.lax.scan(train_step, (θ, opt_state), None, length=epochs)\n",
+    "    θ_final, _ = jax.lax.fori_loop(0, epochs, train_step, (θ, opt_state))\n",
     "    return θ_final"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "3e160f82",
+   "id": "ea87c477",
    "metadata": {},
    "source": [
     "Let’s try running it."
@@ -909,7 +890,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e2f006ec",
+   "id": "2055a383",
    "metadata": {
     "hide-output": false
    },
@@ -919,7 +900,7 @@
     "θ = initialize_params(param_key, config)\n",
     "\n",
     "# Warmup run to trigger JIT compilation\n",
-    "θ_warmup = train_jax_optax(θ, x, y)\n",
+    "train_jax_optax(θ, x, y)\n",
     "\n",
     "# Reset and time the actual run\n",
     "θ = initialize_params(param_key, config)\n",
@@ -936,7 +917,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8366d233",
+   "id": "d7464815",
    "metadata": {
     "hide-output": false
    },
@@ -953,7 +934,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c08af5c9",
+   "id": "fbced377",
    "metadata": {},
    "source": [
     "### Optax with ADAM\n",
@@ -968,7 +949,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8c5c9fe4",
+   "id": "05edff68",
    "metadata": {
     "hide-output": false
    },
@@ -983,26 +964,26 @@
     "    ):\n",
     "    \"\"\"\n",
     "    Train model using Optax ADAM optimizer.\n",
-    "    Pure functional version using jax.lax.scan.\n",
+    "    Pure functional version using jax.lax.fori_loop.\n",
     "    \"\"\"\n",
     "    solver = optax.adam(learning_rate)\n",
     "    opt_state = solver.init(θ)\n",
     "\n",
-    "    def train_step(carry, _):\n",
+    "    def train_step(i, carry):\n",
     "        θ, opt_state = carry\n",
     "        grad = loss_gradient(θ, x, y)\n",
     "        updates, opt_state_new = solver.update(grad, opt_state, θ)\n",
     "        θ_new = optax.apply_updates(θ, updates)\n",
-    "        return (θ_new, opt_state_new), None\n",
+    "        return (θ_new, opt_state_new)\n",
     "\n",
-    "    (θ_final, _), _ = jax.lax.scan(train_step, (θ, opt_state), None, length=epochs)\n",
+    "    θ_final, _ = jax.lax.fori_loop(0, epochs, train_step, (θ, opt_state))\n",
     "    return θ_final"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bcecb834",
+   "id": "2bf12e78",
    "metadata": {
     "hide-output": false
    },
@@ -1012,7 +993,7 @@
     "θ = initialize_params(param_key, config)\n",
     "\n",
     "# Warmup run to trigger JIT compilation\n",
-    "θ_warmup = train_jax_optax_adam(θ, x, y)\n",
+    "train_jax_optax_adam(θ, x, y)\n",
     "\n",
     "# Reset and time the actual run\n",
     "θ = initialize_params(param_key, config)\n",
@@ -1028,7 +1009,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3cc0442e",
+   "id": "1efd465c",
    "metadata": {},
    "source": [
     "Here’s a visualization of the result."
@@ -1037,7 +1018,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8a1c5a84",
+   "id": "1fff90be",
    "metadata": {
     "hide-output": false
    },
@@ -1054,7 +1035,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6dccd953",
+   "id": "e6277f4c",
    "metadata": {},
    "source": [
     "## Summary\n",
@@ -1065,7 +1046,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3af83dc1",
+   "id": "2ae361f4",
    "metadata": {
     "hide-output": false
    },
@@ -1101,7 +1082,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a5b94e05",
+   "id": "c24f8fcd",
    "metadata": {},
    "source": [
     "All methods achieve similar validation MSE values (around 0.043-0.045).\n",
@@ -1121,7 +1102,7 @@
   }
  ],
  "metadata": {
-  "date": 1764311391.007839,
+  "date": 1764321277.4609165,
   "filename": "jax_nn.md",
   "kernelspec": {
    "display_name": "Python",
