--- a/keras.ipynb
+++ b/keras.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "c1b843c7",
+   "id": "eb504c48",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7054a6c3",
+   "id": "1c1de7ca",
    "metadata": {},
    "source": [
     "# Simple Neural Network Regression with Keras and JAX"
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5ae400b8",
+   "id": "45f1b41d",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -56,7 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c2283c2c",
+   "id": "11a9e12f",
    "metadata": {
     "hide-output": false
    },
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ca5474d7",
+   "id": "c9e4135f",
    "metadata": {},
    "source": [
     "Let’s install Keras."
@@ -77,7 +77,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c5ec7843",
+   "id": "f53cb9f2",
    "metadata": {
     "hide-output": false
    },
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2f5f805d",
+   "id": "96721deb",
    "metadata": {},
    "source": [
     "Now we specify that the desired backend is JAX."
@@ -97,7 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c17810b7",
+   "id": "ffcb3553",
    "metadata": {
     "hide-output": false
    },
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "53727f6e",
+   "id": "58f2091b",
    "metadata": {},
    "source": [
     "Now we should be able to import some tools from Keras.\n",
@@ -120,7 +120,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3d65e32d",
+   "id": "4a5a7ade",
    "metadata": {
     "hide-output": false
    },
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1db52214",
+   "id": "e3f597f5",
    "metadata": {},
    "source": [
     "## Data\n",
@@ -161,7 +161,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ce9ae410",
+   "id": "ed7f1691",
    "metadata": {
     "hide-output": false
    },
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a3ce2873",
+   "id": "4ab0821d",
    "metadata": {},
    "source": [
     "Now we generate some data to train the model."
@@ -192,7 +192,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ad623998",
+   "id": "f1738887",
    "metadata": {
     "hide-output": false
    },
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1a9a9376",
+   "id": "154d2173",
    "metadata": {},
    "source": [
     "Here’s a plot of the training data."
@@ -212,7 +212,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9e7cc523",
+   "id": "f2a7b2f4",
    "metadata": {
     "hide-output": false
    },
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "989f666b",
+   "id": "1caff430",
    "metadata": {},
    "source": [
     "We’ll also use data from the same process for cross-validation."
@@ -236,7 +236,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "69ee35b8",
+   "id": "07996e81",
    "metadata": {
     "hide-output": false
    },
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "74cc3a4e",
+   "id": "a2804dde",
    "metadata": {},
    "source": [
     "## Models\n",
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "559a8ea8",
+   "id": "19b52e61",
    "metadata": {},
    "source": [
     "## Regression model\n",
@@ -274,7 +274,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7730efcb",
+   "id": "37bc9e82",
    "metadata": {
     "hide-output": false
    },
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a6022dd5",
+   "id": "3028472c",
    "metadata": {},
    "source": [
     "In the function above you can see that\n",
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0ad3cd37",
+   "id": "d11ed363",
    "metadata": {},
    "source": [
     "### Deep Network\n",
@@ -321,7 +321,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b7e8e032",
+   "id": "b8ff13b3",
    "metadata": {
     "hide-output": false
    },
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7459ba43",
+   "id": "8f580ec3",
    "metadata": {},
    "source": [
     "### Tracking errors\n",
@@ -358,7 +358,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "88443677",
+   "id": "b92c04d8",
    "metadata": {
     "hide-output": false
    },
@@ -382,7 +382,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "33debba9",
+   "id": "83fb6f72",
    "metadata": {},
    "source": [
     "## Training\n",
@@ -392,7 +392,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cec74146",
+   "id": "030f5bc1",
    "metadata": {},
    "source": [
     "### Linear regression\n",
@@ -403,7 +403,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "109d1e43",
+   "id": "faaf99b8",
    "metadata": {
     "hide-output": false
    },
@@ -414,7 +414,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "35b98984",
+   "id": "f3907a15",
    "metadata": {},
    "source": [
     "Now we train the model using the training data."
@@ -423,7 +423,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "47a0e59e",
+   "id": "0461d46c",
    "metadata": {
     "hide-output": false
    },
@@ -436,7 +436,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "430ff9e5",
+   "id": "0c5040f5",
    "metadata": {},
    "source": [
     "Let’s have a look at the evolution of MSE as the model is trained."
@@ -445,7 +445,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e042445d",
+   "id": "8c56b244",
    "metadata": {
     "hide-output": false
    },
@@ -458,7 +458,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "991db21c",
+   "id": "ac571cea",
    "metadata": {},
    "source": [
     "Let’s print the final MSE on the cross-validation data."
@@ -467,7 +467,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "43244b1a",
+   "id": "9f06d58d",
    "metadata": {
     "hide-output": false
    },
@@ -479,7 +479,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "05764b51",
+   "id": "1bffdde8",
    "metadata": {},
    "source": [
     "Here’s our output predictions on the cross-validation data."
@@ -488,7 +488,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f21c3de8",
+   "id": "a20131cd",
    "metadata": {
     "hide-output": false
    },
@@ -499,7 +499,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c21aeb5c",
+   "id": "43d9acd0",
    "metadata": {},
    "source": [
     "We use the following function to plot our predictions along with the data."
@@ -508,7 +508,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d87f0297",
+   "id": "a97eb851",
    "metadata": {
     "hide-output": false
    },
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f8903c5c",
+   "id": "a02331e6",
    "metadata": {},
    "source": [
     "Let’s now call the function on the cross-validation data."
@@ -532,7 +532,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "87003be5",
+   "id": "28cbcdd7",
    "metadata": {
     "hide-output": false
    },
@@ -545,7 +545,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ef9edd39",
+   "id": "7a90db46",
    "metadata": {},
    "source": [
     "### Deep learning\n",
@@ -558,7 +558,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f23346c8",
+   "id": "92d12305",
    "metadata": {
     "hide-output": false
    },
@@ -570,7 +570,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "de55bcf6",
+   "id": "bd640107",
    "metadata": {
     "hide-output": false
    },
@@ -584,7 +584,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a0ed909b",
+   "id": "3ec5c1ef",
    "metadata": {
     "hide-output": false
    },
@@ -597,7 +597,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d0679c16",
+   "id": "cabf8569",
    "metadata": {},
    "source": [
     "Here’s the final MSE for the deep learning model."
@@ -606,7 +606,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fadd34cd",
+   "id": "e4c75744",
    "metadata": {
     "hide-output": false
    },
@@ -618,7 +618,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3f160b23",
+   "id": "e28b7b6f",
    "metadata": {},
    "source": [
     "You will notice that this loss is much lower than the one we achieved with\n",
@@ -630,7 +630,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f2a19eb6",
+   "id": "6314f32c",
    "metadata": {
     "hide-output": false
    },
@@ -642,7 +642,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "68f36571",
+   "id": "9e32c973",
    "metadata": {
     "hide-output": false
    },
@@ -658,7 +658,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "728d9eec",
+   "id": "373e98b9",
    "metadata": {
     "hide-output": false
    },
@@ -671,7 +671,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2f89d697",
+   "id": "341c6a94",
    "metadata": {},
    "source": [
     "Not surprisingly, the multilayer neural network does a much better job of fitting the data.\n",
@@ -681,7 +681,7 @@
   }
  ],
  "metadata": {
-  "date": 1764311391.050556,
+  "date": 1764321277.5038295,
   "filename": "keras.md",
   "kernelspec": {
    "display_name": "Python",
