--- a/mle.ipynb
+++ b/mle.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "35c2ab66",
+   "id": "bcc69539",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d320bf5d",
+   "id": "fb918e34",
    "metadata": {},
    "source": [
     "# Maximum Likelihood Estimation"
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fcd9646b",
+   "id": "2275e914",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "679d2fc2",
+   "id": "17b7fc86",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -52,7 +52,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "92e09744",
+   "id": "e87c057d",
    "metadata": {
     "hide-output": false
    },
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "69f1a0c8",
+   "id": "859870a2",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -76,7 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9f163642",
+   "id": "83121c25",
    "metadata": {
     "hide-output": false
    },
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d427f168",
+   "id": "90c06dcf",
    "metadata": {},
    "source": [
     "We will use 64 bit floats with JAX in order to increase the precision."
@@ -96,7 +96,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "255c4e90",
+   "id": "c0fcde2d",
    "metadata": {
     "hide-output": false
    },
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7ddbd509",
+   "id": "4f2505e7",
    "metadata": {},
    "source": [
     "## MLE with numerical methods (JAX)\n",
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6ea14227",
+   "id": "6376d05a",
    "metadata": {},
    "source": [
     "### A toy model\n",
@@ -144,7 +144,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5b3463fc",
+   "id": "286822fd",
    "metadata": {
     "hide-output": false
    },
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "42b063e2",
+   "id": "29c39992",
    "metadata": {},
    "source": [
     "To find the value of $ \\frac{d \\log \\mathcal{L(\\boldsymbol{\\beta})}}{d \\boldsymbol{\\beta}} $, we can use [jax.grad](https://jax.readthedocs.io/en/latest/_autosummary/jax.grad.html) which auto-differentiates the given function.\n",
@@ -168,7 +168,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ea8f533a",
+   "id": "3d58e7f5",
    "metadata": {
     "hide-output": false
    },
@@ -180,7 +180,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "32d07546",
+   "id": "5b4b6436",
    "metadata": {
     "hide-output": false
    },
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "021dd4a0",
+   "id": "a4ea48b7",
    "metadata": {},
    "source": [
     "The plot shows that the maximum likelihood value (the top plot) occurs\n",
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "59dec893",
+   "id": "e8f5698b",
    "metadata": {},
    "source": [
     "### A Poisson model\n",
@@ -263,7 +263,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4bb8648c",
+   "id": "e29f5e46",
    "metadata": {
     "hide-output": false
    },
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "55d1c594",
+   "id": "f6d377d4",
    "metadata": {},
    "source": [
     "The log likelihood function of the Poisson regression is\n",
@@ -313,7 +313,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a5a0ae77",
+   "id": "dc68897e",
    "metadata": {
     "hide-output": false
    },
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "65f1e9f3",
+   "id": "9a6f2a3a",
    "metadata": {},
    "source": [
     "Now we can define the log likelihood function in Python"
@@ -337,7 +337,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fff96c2c",
+   "id": "1cd960e0",
    "metadata": {
     "hide-output": false
    },
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aba45406",
+   "id": "fd0d55ca",
    "metadata": {},
    "source": [
     "To find the gradient of the `poisson_logL`, we again use [jax.grad](https://jax.readthedocs.io/en/latest/_autosummary/jax.grad.html).\n",
@@ -371,7 +371,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7349cd54",
+   "id": "a2e4d019",
    "metadata": {
     "hide-output": false
    },
@@ -383,7 +383,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b7f7cb66",
+   "id": "8eb98851",
    "metadata": {},
    "source": [
     "Our function `newton_raphson` will take a `RegressionModel` object\n",
@@ -397,7 +397,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "20c6d58f",
+   "id": "55aeb5d0",
    "metadata": {
     "hide-output": false
    },
@@ -437,7 +437,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5fc3a1ca",
+   "id": "bc96041b",
    "metadata": {},
    "source": [
     "Let’s try out our algorithm with a small dataset of 5 observations and 3\n",
@@ -447,7 +447,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "81516612",
+   "id": "b5ebec10",
    "metadata": {
     "hide-output": false
    },
@@ -473,7 +473,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ffc745df",
+   "id": "2d99d4a8",
    "metadata": {},
    "source": [
     "As this was a simple model with few observations, the algorithm achieved\n",
@@ -485,7 +485,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b1b5a5f5",
+   "id": "199f1b28",
    "metadata": {
     "hide-output": false
    },
@@ -496,7 +496,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e2596b89",
+   "id": "db1a2de4",
    "metadata": {},
    "source": [
     "## MLE with `statsmodels`\n",
@@ -514,7 +514,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1e1d00fd",
+   "id": "0ec8df2c",
    "metadata": {
     "hide-output": false
    },
@@ -527,7 +527,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6848e65a",
+   "id": "403d30fc",
    "metadata": {
     "hide-output": false
    },
@@ -539,7 +539,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9c616c6c",
+   "id": "499772d0",
    "metadata": {},
    "source": [
     "The benefit of writing our own procedure, relative to statsmodels is that\n",
@@ -550,7 +550,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e3a7763f",
+   "id": "77e60772",
    "metadata": {},
    "source": [
     "## Exercise 21.1\n",
@@ -595,7 +595,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bdc0b8dc",
+   "id": "07a830b9",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 21.1](https://jax.quantecon.org/#newton_mle1)\n",
@@ -606,7 +606,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7525e810",
+   "id": "98f0c5fe",
    "metadata": {
     "hide-output": false
    },
@@ -619,7 +619,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cb853c91",
+   "id": "70226706",
    "metadata": {},
    "source": [
     "To simulate the model, we sample 500,000 values of $ x_t $ from the standard normal distribution."
@@ -628,7 +628,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12cd77f7",
+   "id": "a620e283",
    "metadata": {
     "hide-output": false
    },
@@ -642,7 +642,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0595b051",
+   "id": "16eafa32",
    "metadata": {},
    "source": [
     "We compute $ \\lambda $ using [(21.1)](#equation-lambda-mle)"
@@ -651,7 +651,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fb901473",
+   "id": "fbf83512",
    "metadata": {
     "hide-output": false
    },
@@ -662,7 +662,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0d1371d0",
+   "id": "990eff45",
    "metadata": {},
    "source": [
     "Let’s define $ y_t $ by sampling from a Poisson distribution with mean as $ \\lambda_t $."
@@ -671,7 +671,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bbb7b6fd",
+   "id": "96f72f31",
    "metadata": {
     "hide-output": false
    },
@@ -682,7 +682,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "62c19b0b",
+   "id": "12dc8510",
    "metadata": {},
    "source": [
     "Now let’s try to recover the true parameter values using the Newton-Raphson\n",
@@ -692,7 +692,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4085bfc3",
+   "id": "4b7137b7",
    "metadata": {
     "hide-output": false
    },
@@ -712,7 +712,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "45542fcb",
+   "id": "7d1b28c5",
    "metadata": {},
    "source": [
     "The maximum likelihood estimates are similar to the true parameter values."
@@ -720,7 +720,7 @@
   }
  ],
  "metadata": {
-  "date": 1764311391.195743,
+  "date": 1764321277.6546767,
   "filename": "mle.md",
   "kernelspec": {
    "display_name": "Python",
