--- a/short_path.ipynb
+++ b/short_path.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "d11a07a5",
+   "id": "a4c17c51",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f9f54fed",
+   "id": "02d3e6a8",
    "metadata": {},
    "source": [
     "# Shortest Paths"
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "22cf3151",
+   "id": "ede74a5d",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ffabd728",
+   "id": "ba3077be",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -48,7 +48,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e25402e6",
+   "id": "f1154ebf",
    "metadata": {
     "hide-output": false
    },
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "60ba4127",
+   "id": "726b514a",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -70,7 +70,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "95ba94bd",
+   "id": "7f3bce71",
    "metadata": {
     "hide-output": false
    },
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0bc1e401",
+   "id": "8bb7dc5d",
    "metadata": {},
    "source": [
     "## Solving for Minimum Cost-to-Go\n",
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "703cb254",
+   "id": "d6f6dd6f",
    "metadata": {},
    "source": [
     "### The Algorithm\n",
@@ -128,7 +128,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "675676e7",
+   "id": "70ad3041",
    "metadata": {
     "hide-output": false
    },
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b90342c1",
+   "id": "50ad8f82",
    "metadata": {},
    "source": [
     "Notice that the cost of staying still (on the principle diagonal) is set to\n",
@@ -161,7 +161,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e62edf89",
+   "id": "0339e87a",
    "metadata": {
     "hide-output": false
    },
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2ad24956",
+   "id": "5573a149",
    "metadata": {},
    "source": [
     "We can further optimize the above code by using [jax.lax.while_loop](https://jax.readthedocs.io/en/latest/_autosummary/jax.lax.while_loop.html). The extra acceleration is due to the fact that the entire operation can be optimized by the JAX compiler and launched as a single kernel on the GPU."
@@ -197,7 +197,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2ab99f74",
+   "id": "3d441ad4",
    "metadata": {
     "hide-output": false
    },
@@ -211,7 +211,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c0f6899e",
+   "id": "a39ae8c9",
    "metadata": {
     "hide-output": false
    },
@@ -232,7 +232,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6d90b917",
+   "id": "3b827144",
    "metadata": {
     "hide-output": false
    },
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "778cd42d",
+   "id": "11594b3f",
    "metadata": {},
    "source": [
     "Let’s see the timing for JIT compilation of the functions and runtime results."
@@ -254,7 +254,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a238b53c",
+   "id": "f0940018",
    "metadata": {
     "hide-output": false
    },
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "40a48046",
+   "id": "f3d62679",
    "metadata": {},
    "source": [
     "Now, this runs faster once we have the JIT compiled JAX version of the functions."
@@ -275,7 +275,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aad6962d",
+   "id": "f86640ee",
    "metadata": {
     "hide-output": false
    },
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e32a586b",
+   "id": "963b1fe5",
    "metadata": {},
    "source": [
     ">**Note**\n",
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6f0d76f2",
+   "id": "44465cd3",
    "metadata": {},
    "source": [
     "## Exercises"
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d693b790",
+   "id": "ec2825c5",
    "metadata": {},
    "source": [
     "## Exercise 13.1\n",
@@ -329,7 +329,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b44f0337",
+   "id": "7a2040dc",
    "metadata": {
     "hide-output": false
    },
@@ -440,7 +440,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c22e562e",
+   "id": "05029f88",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 13.1](https://jax.quantecon.org/#short_path_ex1)\n",
@@ -451,7 +451,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "619e70ff",
+   "id": "70df849c",
    "metadata": {
     "hide-output": false
    },
@@ -481,7 +481,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "be95c4c4",
+   "id": "f576ffa3",
    "metadata": {},
    "source": [
     "Let’s write a function `compute_cost_to_go` that returns $ J $ given any valid $ Q $."
@@ -490,7 +490,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e97386ef",
+   "id": "5f907ef6",
    "metadata": {
     "hide-output": false
    },
@@ -524,7 +524,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c0b4ae73",
+   "id": "879672c7",
    "metadata": {},
    "source": [
     "Finally, here’s a function that uses the `cost-to-go` function to obtain the\n",
@@ -534,7 +534,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bb2e05d3",
+   "id": "9b90329c",
    "metadata": {
     "hide-output": false
    },
@@ -555,7 +555,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c73d8da6",
+   "id": "18c5570c",
    "metadata": {},
    "source": [
     "Okay, now we have the necessary functions, let’s call them to do the job we were assigned."
@@ -564,7 +564,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bd3d15d0",
+   "id": "a6449f9d",
    "metadata": {
     "hide-output": false
    },
@@ -575,7 +575,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "08dcc6e3",
+   "id": "d0df4d37",
    "metadata": {},
    "source": [
     "Let’s see the timings for jitting the function and runtime results."
@@ -584,7 +584,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "60a1267c",
+   "id": "f796d8a2",
    "metadata": {
     "hide-output": false
    },
@@ -596,7 +596,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7e449ea2",
+   "id": "5e65c0a0",
    "metadata": {},
    "source": [
     "Let’s run again to eliminate compile time."
@@ -605,7 +605,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3e2b5630",
+   "id": "8828c982",
    "metadata": {
     "hide-output": false
    },
@@ -618,7 +618,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a55dfa7a",
+   "id": "b6d51672",
    "metadata": {
     "hide-output": false
    },
@@ -629,7 +629,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8d4ac8cb",
+   "id": "2fa5c19f",
    "metadata": {},
    "source": [
     "The total cost of the path should agree with $ J[0] $ so let’s check this."
@@ -638,7 +638,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "33a24e3f",
+   "id": "42b50a41",
    "metadata": {
     "hide-output": false
    },
@@ -649,7 +649,7 @@
   }
  ],
  "metadata": {
-  "date": 1764311391.3848884,
+  "date": 1764321277.848012,
   "filename": "short_path.md",
   "kernelspec": {
    "display_name": "Python",
