--- a/opt_invest.ipynb
+++ b/opt_invest.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "7a1a652e",
+   "id": "4e47c6ba",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "47742e53",
+   "id": "6ba596f1",
    "metadata": {},
    "source": [
     "# Optimal Investment"
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5c218b4f",
+   "id": "b1efebb6",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -38,7 +38,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4565dcda",
+   "id": "1a009bab",
    "metadata": {
     "hide-output": false
    },
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ce5de930",
+   "id": "398a8600",
    "metadata": {},
    "source": [
     "We study a monopolist who faces inverse demand curve\n",
@@ -95,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "657132b9",
+   "id": "4b4a2dd3",
    "metadata": {
     "hide-output": false
    },
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "507971d5",
+   "id": "56286d4d",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -119,7 +119,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8ac35bb2",
+   "id": "1fa12ecd",
    "metadata": {
     "hide-output": false
    },
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fb0c7985",
+   "id": "d9c17b73",
    "metadata": {},
    "source": [
     "We will use 64 bit floats with JAX in order to increase the precision."
@@ -139,7 +139,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "319ce7d4",
+   "id": "6b07f3f4",
    "metadata": {
     "hide-output": false
    },
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ba208e4a",
+   "id": "017dc7fd",
    "metadata": {},
    "source": [
     "Let’s define a function to create an investment model using the given parameters."
@@ -159,7 +159,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2fada244",
+   "id": "1d765f3d",
    "metadata": {
     "hide-output": false
    },
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eb3a2fc1",
+   "id": "74ee490f",
    "metadata": {},
    "source": [
     "Let’s re-write the vectorized version of the right-hand side of the\n",
@@ -209,7 +209,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6983282a",
+   "id": "ea86ab6d",
    "metadata": {
     "hide-output": false
    },
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "90e3505a",
+   "id": "10124249",
    "metadata": {},
    "source": [
     "We define a function to compute the current rewards $ r_\\sigma $ given policy $ \\sigma $,\n",
@@ -260,7 +260,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6c1c3789",
+   "id": "71969a3b",
    "metadata": {
     "hide-output": false
    },
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b9c09f2a",
+   "id": "c0854ba0",
    "metadata": {},
    "source": [
     "Define the Bellman operator."
@@ -301,7 +301,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8fe1d0fc",
+   "id": "4a4c5389",
    "metadata": {
     "hide-output": false
    },
@@ -316,7 +316,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0f10cf98",
+   "id": "e09d959b",
    "metadata": {},
    "source": [
     "The following function computes a v-greedy policy."
@@ -325,7 +325,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7a1ff10e",
+   "id": "66d3ac5e",
    "metadata": {
     "hide-output": false
    },
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4e803588",
+   "id": "c7444df8",
    "metadata": {},
    "source": [
     "Define the $ \\sigma $-policy operator."
@@ -349,7 +349,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "87304115",
+   "id": "7867ca39",
    "metadata": {
     "hide-output": false
    },
@@ -384,7 +384,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "49734e25",
+   "id": "1a51bd72",
    "metadata": {},
    "source": [
     "Next, we want to computes the lifetime value of following policy $ \\sigma $.\n",
@@ -423,7 +423,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f8e46c02",
+   "id": "9a869f84",
    "metadata": {
     "hide-output": false
    },
@@ -452,7 +452,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0d15165e",
+   "id": "10bfa649",
    "metadata": {},
    "source": [
     "Now we can define a function to compute $ v_{\\sigma} $"
@@ -461,7 +461,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "df6cfece",
+   "id": "7ef33be9",
    "metadata": {
     "hide-output": false
    },
@@ -486,7 +486,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "89234a70",
+   "id": "477598a9",
    "metadata": {},
    "source": [
     "We use successive approximation for VFI."
@@ -495,7 +495,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12d427ed",
+   "id": "4a934b6e",
    "metadata": {
     "hide-output": false
    },
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ed1889f8",
+   "id": "b47b3891",
    "metadata": {},
    "source": [
     "For OPI we’ll add a compiled routine that computes $ T_σ^m v $."
@@ -532,7 +532,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d3f92c6c",
+   "id": "fd880a0b",
    "metadata": {
     "hide-output": false
    },
@@ -553,7 +553,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "46563d04",
+   "id": "a6eae1bc",
    "metadata": {},
    "source": [
     "Finally, we introduce the solvers that implement VFI, HPI and OPI."
@@ -562,7 +562,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14f6728f",
+   "id": "4de9457d",
    "metadata": {
     "hide-output": false
    },
@@ -581,7 +581,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dee58d38",
+   "id": "67b8afec",
    "metadata": {},
    "source": [
     "For OPI we will use a compiled JAX `lax.while_loop` operation to speed execution."
@@ -590,7 +590,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "083495e9",
+   "id": "ac18f459",
    "metadata": {
     "hide-output": false
    },
@@ -628,7 +628,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9720dfce",
+   "id": "2a7a3c6d",
    "metadata": {},
    "source": [
     "Here’s a friendly interface to OPI"
@@ -637,7 +637,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3ba640f1",
+   "id": "eeb4751b",
    "metadata": {
     "hide-output": false
    },
@@ -651,7 +651,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ec5e8a9f",
+   "id": "5948c662",
    "metadata": {},
    "source": [
     "Here’s HPI"
@@ -660,7 +660,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6a350b99",
+   "id": "5212bda3",
    "metadata": {
     "hide-output": false
    },
@@ -686,7 +686,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b1c70188",
+   "id": "f32b4e52",
    "metadata": {
     "hide-output": false
    },
@@ -702,7 +702,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fe6529b0",
+   "id": "cf50038f",
    "metadata": {
     "hide-output": false
    },
@@ -715,7 +715,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "61be3992",
+   "id": "a61a2b4f",
    "metadata": {
     "hide-output": false
    },
@@ -731,7 +731,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9e66a825",
+   "id": "3a98029e",
    "metadata": {},
    "source": [
     "Here’s the plot of the Howard policy, as a function of $ y $ at the highest and lowest values of $ z $."
@@ -740,7 +740,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8a1baca0",
+   "id": "26539484",
    "metadata": {
     "hide-output": false
    },
@@ -757,7 +757,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "81530756",
+   "id": "58fa81b8",
    "metadata": {
     "hide-output": false
    },
@@ -770,7 +770,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ca4a7b39",
+   "id": "77e92263",
    "metadata": {
     "hide-output": false
    },
@@ -786,7 +786,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "78893d64",
+   "id": "810b0a22",
    "metadata": {},
    "source": [
     "Here’s the plot of the VFI, as a function of $ y $ at the highest and lowest values of $ z $."
@@ -795,7 +795,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "30411f01",
+   "id": "0818fb28",
    "metadata": {
     "hide-output": false
    },
@@ -812,7 +812,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "486574db",
+   "id": "7fea5b79",
    "metadata": {
     "hide-output": false
    },
@@ -825,7 +825,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4975565b",
+   "id": "61b7fc79",
    "metadata": {
     "hide-output": false
    },
@@ -841,7 +841,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a5f43af8",
+   "id": "a7aa0360",
    "metadata": {},
    "source": [
     "Here’s the plot of the optimal policy, as a function of $ y $ at the highest and lowest values of $ z $."
@@ -850,7 +850,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bc6808cb",
+   "id": "e8eb9d49",
    "metadata": {
     "hide-output": false
    },
@@ -866,7 +866,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b9ea19b0",
+   "id": "fe1c3fcc",
    "metadata": {},
    "source": [
     "We observe that all the solvers produce the same output from the above three plots.\n",
@@ -877,7 +877,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "790b4993",
+   "id": "3ece5f69",
    "metadata": {
     "hide-output": false
    },
@@ -889,7 +889,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6d9e7b1b",
+   "id": "4e25d19f",
    "metadata": {
     "hide-output": false
    },
@@ -902,7 +902,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5bdc4ac3",
+   "id": "469cd42d",
    "metadata": {
     "hide-output": false
    },
@@ -918,7 +918,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dcc4730b",
+   "id": "2d0f81ed",
    "metadata": {
     "hide-output": false
    },
@@ -931,7 +931,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "03ede277",
+   "id": "b2765e33",
    "metadata": {
     "hide-output": false
    },
@@ -947,7 +947,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0b31eb66",
+   "id": "6c28b774",
    "metadata": {
     "hide-output": false
    },
@@ -969,7 +969,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aa723557",
+   "id": "9ad2ec06",
    "metadata": {
     "hide-output": false
    },
@@ -989,7 +989,7 @@
   }
  ],
  "metadata": {
-  "date": 1764311391.2491438,
+  "date": 1764321277.708535,
   "filename": "opt_invest.md",
   "kernelspec": {
    "display_name": "Python",
