--- a/wealth_dynamics.ipynb
+++ b/wealth_dynamics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "e945057c",
+   "id": "887b90ab",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9231abb9",
+   "id": "40f84d4f",
    "metadata": {},
    "source": [
     "# Wealth Distribution Dynamics"
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "679ebb9e",
+   "id": "839975d5",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -55,7 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6987c489",
+   "id": "bb25f5eb",
    "metadata": {
     "hide-output": false
    },
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d6a10996",
+   "id": "7ddea6d2",
    "metadata": {},
    "source": [
     "We will use the following imports:"
@@ -75,7 +75,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0e5a6177",
+   "id": "7e2b08ea",
    "metadata": {
     "hide-output": false
    },
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "771b1af8",
+   "id": "895704da",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -102,7 +102,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eed04cf5",
+   "id": "e9ae10d2",
    "metadata": {
     "hide-output": false
    },
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ff9a38af",
+   "id": "93f01951",
    "metadata": {},
    "source": [
     "## Wealth dynamics\n",
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0b5fc288",
+   "id": "1dddc686",
    "metadata": {},
    "source": [
     "## Implementation"
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "26224ce1",
+   "id": "df655da1",
    "metadata": {},
    "source": [
     "### Numba implementation\n",
@@ -193,7 +193,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f3dd89aa",
+   "id": "1a5a4010",
    "metadata": {
     "hide-output": false
    },
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1a290933",
+   "id": "9c59c5aa",
    "metadata": {},
    "source": [
     "Here’s a function that generates the aggregate state process"
@@ -248,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "22380336",
+   "id": "4fd6b0d2",
    "metadata": {
     "hide-output": false
    },
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "19314eb2",
+   "id": "18aed5c4",
    "metadata": {},
    "source": [
     "Here’s a function that updates household wealth by one period, taking the\n",
@@ -276,7 +276,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cfa61ca7",
+   "id": "0c7a9071",
    "metadata": {
     "hide-output": false
    },
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f9f2d156",
+   "id": "b98813b8",
    "metadata": {},
    "source": [
     "Here’s a function to simulate the time series of wealth for an individual household"
@@ -309,7 +309,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "83f322cd",
+   "id": "6771c21c",
    "metadata": {
     "hide-output": false
    },
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9e16a223",
+   "id": "71510055",
    "metadata": {},
    "source": [
     "Let’s look at the wealth dynamics of an individual household"
@@ -346,7 +346,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4c3e10ca",
+   "id": "c36c4b4e",
    "metadata": {
     "hide-output": false
    },
@@ -363,7 +363,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3a8df18c",
+   "id": "375badfd",
    "metadata": {
     "hide-output": false
    },
@@ -376,7 +376,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "94a122ff",
+   "id": "c9dc44e7",
    "metadata": {},
    "source": [
     "Notice the large spikes in wealth over time.\n",
@@ -392,7 +392,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6e064286",
+   "id": "99325c97",
    "metadata": {
     "hide-output": false
    },
@@ -432,7 +432,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ad780512",
+   "id": "7ba092ba",
    "metadata": {},
    "source": [
     "Parallelization works in the function above because the time path of each\n",
@@ -446,7 +446,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "147be80c",
+   "id": "f9e2c5dd",
    "metadata": {
     "hide-output": false
    },
@@ -466,7 +466,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "443b0925",
+   "id": "afdd2fe2",
    "metadata": {},
    "source": [
     "We run it again to eliminate compile time."
@@ -475,7 +475,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c6808c30",
+   "id": "354aee53",
    "metadata": {
     "hide-output": false
    },
@@ -489,7 +489,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5d5b8f42",
+   "id": "bf30cdac",
    "metadata": {},
    "source": [
     "### JAX implementation\n",
@@ -501,7 +501,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2475b95f",
+   "id": "1a3c1e4c",
    "metadata": {
     "hide-output": false
    },
@@ -541,7 +541,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "750515c6",
+   "id": "41ec2142",
    "metadata": {},
    "source": [
     "Let’s see how long it takes to shift the cross-section of households forward\n",
@@ -551,7 +551,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8e87e510",
+   "id": "e6cbfb3a",
    "metadata": {
     "hide-output": false
    },
@@ -568,7 +568,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b8c29488",
+   "id": "fb559ff7",
    "metadata": {
     "hide-output": false
    },
@@ -585,7 +585,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1cf53b32",
+   "id": "e6557724",
    "metadata": {
     "hide-output": false
    },
@@ -601,7 +601,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "92b30f26",
+   "id": "743ff20c",
    "metadata": {},
    "source": [
     "And let’s see how long it takes if we compile the loop."
@@ -610,7 +610,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c6a213ff",
+   "id": "946624f2",
    "metadata": {
     "hide-output": false
    },
@@ -659,7 +659,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d4066245",
+   "id": "203586c1",
    "metadata": {
     "hide-output": false
    },
@@ -673,7 +673,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "57e76bbc",
+   "id": "a2ac933a",
    "metadata": {
     "hide-output": false
    },
@@ -692,7 +692,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "95bc038d",
+   "id": "b94084f4",
    "metadata": {
     "hide-output": false
    },
@@ -711,7 +711,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "22a67bdb",
+   "id": "d29be957",
    "metadata": {
     "hide-output": false
    },
@@ -722,7 +722,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6c3aae0d",
+   "id": "3d962b62",
    "metadata": {},
    "source": [
     "### Pareto tails\n",
@@ -741,7 +741,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9d90bc19",
+   "id": "b73cceb9",
    "metadata": {
     "hide-output": false
    },
@@ -764,7 +764,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "36837bd4",
+   "id": "b575947c",
    "metadata": {},
    "source": [
     "### Lorenz curves and Gini coefficients\n",
@@ -779,7 +779,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3ecdba0e",
+   "id": "3f1b5f64",
    "metadata": {},
    "source": [
     "#### Lorenz curve\n",
@@ -800,7 +800,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8ef29386",
+   "id": "36d81967",
    "metadata": {
     "hide-output": false
    },
@@ -819,7 +819,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4d578976",
+   "id": "502d93c6",
    "metadata": {},
    "source": [
     "Let’s test"
@@ -828,7 +828,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "58fe5391",
+   "id": "0f7ff683",
    "metadata": {
     "hide-output": false
    },
@@ -845,7 +845,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "221925ad",
+   "id": "edbb0c55",
    "metadata": {
     "hide-output": false
    },
@@ -860,7 +860,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "53cd058d",
+   "id": "c31fa029",
    "metadata": {
     "hide-output": false
    },
@@ -872,7 +872,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3907ec4b",
+   "id": "0f3ea779",
    "metadata": {
     "hide-output": false
    },
@@ -885,7 +885,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0a7be0f2",
+   "id": "7f3cfb3d",
    "metadata": {
     "hide-output": false
    },
@@ -900,7 +900,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "af4d5c28",
+   "id": "d292b01e",
    "metadata": {},
    "source": [
     "#### Gini Coefficient\n",
@@ -922,7 +922,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "051e4516",
+   "id": "4a391dd7",
    "metadata": {
     "hide-output": false
    },
@@ -940,7 +940,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "83a75089",
+   "id": "5e8049a2",
    "metadata": {
     "hide-output": false
    },
@@ -952,7 +952,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "48b518de",
+   "id": "87596f93",
    "metadata": {
     "hide-output": false
    },
@@ -965,7 +965,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17dfda2f",
+   "id": "48e914d9",
    "metadata": {
     "hide-output": false
    },
@@ -976,7 +976,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "81379dd0",
+   "id": "d2ca573d",
    "metadata": {},
    "source": [
     "## Exercises"
@@ -984,7 +984,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a4135698",
+   "id": "acf57b5a",
    "metadata": {},
    "source": [
     "## Exercise 7.1\n",
@@ -996,7 +996,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "90925d0f",
+   "id": "044050d4",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 7.1](https://jax.quantecon.org/#wd_ex1)\n",
@@ -1007,7 +1007,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a0ffa2e2",
+   "id": "0e9942b1",
    "metadata": {
     "hide-output": false
    },
@@ -1028,7 +1028,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3bc7afd4",
+   "id": "15e78546",
    "metadata": {
     "hide-output": false
    },
@@ -1040,7 +1040,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3309c2de",
+   "id": "9392f435",
    "metadata": {
     "hide-output": false
    },
@@ -1053,7 +1053,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "358690c3",
+   "id": "4e876d11",
    "metadata": {
     "hide-output": false
    },
@@ -1064,7 +1064,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0496c46e",
+   "id": "c0b7a4b4",
    "metadata": {},
    "source": [
     "## Exercise 7.2\n",
@@ -1091,7 +1091,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bb98c340",
+   "id": "9c27f5ff",
    "metadata": {
     "hide-output": false
    },
@@ -1102,7 +1102,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8a0f3a8b",
+   "id": "d8d0a392",
    "metadata": {},
    "source": [
     "Use the following as your initial cross-sectional distribution"
@@ -1111,7 +1111,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "50005f41",
+   "id": "0dbb3fc8",
    "metadata": {
     "hide-output": false
    },
@@ -1123,7 +1123,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "413452b3",
+   "id": "eba03086",
    "metadata": {},
    "source": [
     "Once you have done that, plot the Gini coefficients as well.\n",
@@ -1133,7 +1133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ec7214eb",
+   "id": "6b7b6ad3",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 7.2](https://jax.quantecon.org/#wd_ex2)\n",
@@ -1144,7 +1144,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "920aaf64",
+   "id": "a753647e",
    "metadata": {
     "hide-output": false
    },
@@ -1169,7 +1169,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b36fea1a",
+   "id": "1963d308",
    "metadata": {},
    "source": [
     "The Lorenz curve shifts downwards as returns on financial income rise, indicating a rise in inequality.\n",
@@ -1180,7 +1180,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fb711b70",
+   "id": "be54cf77",
    "metadata": {
     "hide-output": false
    },
@@ -1195,7 +1195,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e7bf259d",
+   "id": "d36d7117",
    "metadata": {},
    "source": [
     "As expected, inequality increases as returns on financial income rise."
@@ -1203,7 +1203,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1b58bf5b",
+   "id": "68f1440e",
    "metadata": {},
    "source": [
     "## Exercise 7.3\n",
@@ -1216,7 +1216,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4be1623a",
+   "id": "1341a12e",
    "metadata": {
     "hide-output": false
    },
@@ -1227,7 +1227,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "831f41be",
+   "id": "0e98cd82",
    "metadata": {},
    "source": [
     "To isolate the role of volatility, set $ \\mu_r = - \\sigma_r^2 / 2 $ at each $ \\sigma_r $.\n",
@@ -1237,7 +1237,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "58d59af6",
+   "id": "7205d8da",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 7.3](https://jax.quantecon.org/#wd_ex3)\n",
@@ -1248,7 +1248,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "20017226",
+   "id": "6fb6d712",
    "metadata": {
     "hide-output": false
    },
@@ -1275,7 +1275,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6528575b",
+   "id": "0dc03674",
    "metadata": {
     "hide-output": false
    },
@@ -1290,7 +1290,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eb39fc3e",
+   "id": "c0d0e451",
    "metadata": {},
    "source": [
     "## Exercise 7.4\n",
@@ -1312,7 +1312,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6b8aeded",
+   "id": "877073a5",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 7.4](https://jax.quantecon.org/#wd_ex4)\n",
@@ -1325,7 +1325,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "46ef699e",
+   "id": "81790011",
    "metadata": {
     "hide-output": false
    },
@@ -1364,7 +1364,7 @@
   }
  ],
  "metadata": {
-  "date": 1764311391.438484,
+  "date": 1764321277.9029202,
   "filename": "wealth_dynamics.md",
   "kernelspec": {
    "display_name": "Python",
